--- a/UrbanLife.Web/wwwroot/css/my-subscription.css
+++ b/UrbanLife.Web/wwwroot/css/my-subscription.css
@@ -4,12 +4,59 @@
     align-items: center;
 }
 
+.image-background-container {
+    position: fixed;
+    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+}
+
+    .image-background-container > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
 .main-title {
     margin-bottom: 0px;
 }
 
 .filter-container {
     margin-bottom: 30px;
+}
+
+.filter-input {
+    text-align: center;
+}
+
+    .filter-input > option {
+        text-align: center;
+    }
+
+.main-form-input {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+    font-family: 'Roboto Flex', sans-serif;
+}
+
+    .main-form-input:hover {
+        cursor: pointer;
+    }
+
+#valid-filter {
+    accent-color: var(--clr-main-green);
+}
+
+    #valid-filter:hover {
+        cursor: pointer;
+    }
+
+.main-select-input {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 5px;
+    font-family: 'Roboto Flex', sans-serif;
 }
 
 .receipts-section {
@@ -25,23 +72,47 @@
 
 .receipt-validation-container {
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .page-navigation-container {
     width: 300px;
     text-align: center;
+    margin-top: 12px;
 }
 
 .page-navigation-links {
     display: flex;
     justify-content: center;
+    margin-top: 5px;
 }
 
 .nav-page-link {
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    padding: 5px 15px;
     width: 25px;
+    text-decoration: none;
+    color: black;
+    background-color: var(--clr-main-gray);
 }
 
-.nav-page-link:not(:first-of-type) {
-    border-left: none;
-}
+    .nav-page-link:hover {
+        transition: 0.3s;
+        background-color: var(--clr-main-green);
+    }
+
+    .nav-page-link:first-of-type {
+        border-start-start-radius: 50%;
+        border-end-start-radius: 50%;
+    }
+
+    .nav-page-link:last-of-type {
+        border-start-end-radius: 50%;
+        border-end-end-radius: 50%;
+    }
+
+    .nav-page-link:not(:first-of-type) {
+        border-left: none;
+    }
