--- a/UrbanLife.Web/wwwroot/css/schedule.css
+++ b/UrbanLife.Web/wwwroot/css/schedule.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('../images/test.jpg');
+    background-image: url('../images/all-lines-background.jpg');
     background-size: cover;
     background-position-y: 10%;
 }
